--- a/makale/index.html
+++ b/makale/index.html
@@ -45,6 +45,8 @@
                         <p data-prop="tur">Tür: <span></span></p>
                         <p data-prop="yazar">Yapımcı/Yazar: <span></span></p>
                         <p data-prop="yayimlanma-tarihi">Yayımlanma Tarihi: <span></span></p>
+                        <p data-prop="orijinal-isim">Orijinal İsim: <span></span></p>
+                        <p data-prop="motor">Motor: <span></span></p>
                     </div>
                 </details>
             </div><hr id="fillAll" />
