yazar bilgileri hakkındaki bug düzeltildi.

--- a/makale/index.html
+++ b/makale/index.html
@@ -82,8 +82,7 @@
                         <p class="source" data-prop="profil">Resim Kaynağı:  "<span id="value"></span>"</p>
                     </div>
                 </details>
-            </div>
-            <div id="author"></div>
+            </div><br />
         </div>
         <div class="modal">
             <img class="thumbnail" />
