"/olustur"a güncelleme eklendi. Hala hazır değil.

--- a/olustur/index.html
+++ b/olustur/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="centered-container">
-            <h1>[HAZIR DEĞİL, ÇALIŞMIYOR!]<br />Santikap'a madde önerisinde bulun</h1>
+            <h1>[HAZIR DEĞİL, KULLANMAYINIZ!]<br />Santikap'a madde önerisinde bulun</h1>
             <div class="form">
                 <h2>Genel Bilgi</h2>
                 Madde İsmi: <input type="text" id="isim" data-format="3, 30" />
@@ -19,6 +19,18 @@
                     <option value="Türkçe">Türkçe</option>
                     <option value="İngilizce">İngilizce</option>
                     <option value="Fransızca">Fransızca</option>
+                    <option value="İspanyolca">İspanyolca</option>
+                    <option value="İtalya">İtalya</option>
+                    <option value="Rusça">Rusça</option>
+                    <option value="Almanca">Almanca</option>
+                    <option value="Arapça">Arapça</option>
+                    <option value="Farsça">Farsça</option>
+                    <option value="Çince">Çince</option>
+                    <option value="Japonca">Japonca</option>
+                    <option value="Korece">Hintçe</option>
+                    <option value="Korece">Bengalce</option>
+                    <option value="Korece">Portekizce</option>
+                    <option value="Korece">Korece</option>
                     <option value="Diğer">Diğer</option>
                 </select>
                 Dil (Diğer): <input type="lang-other" data-optional />
@@ -33,6 +45,10 @@
                 <input type="text" id="ekleyen" placeholder="Adınız/Kullanıcı Adınız" />
                 <button disabled id="send-article">Gönder</button>
             </div>
+        </div>
+        <div class="no-wifi">
+            <h2>Tüh, bu işlem için internet bağlantısı gerekiyor!</h2>
+            <p>Bence de üzücü ama durum bu...</p>
         </div>
     </body>
 </html>
